fix menu spacing

--- a/css/site.css
+++ b/css/site.css
@@ -77,7 +77,7 @@ color:#bd2071
 }
 
 .labs{
-  margin-left: 90px;
-  margin-right: 90px;
+  margin-left: 75px;
+  margin-right: 75px;
   font-weight: bold;
 }
